# skeletons

./: .gitignore
cmake_bootstrap/: CMakeLists.txt
cmake_bootstrap/src/: CMakeLists.txt  main.cpp  main.hpp
cmake_bootstrap/test/: CMakeLists.txt  testmain.cpp
pixel_game_engine/: CMakeLists.txt
pixel_game_engine/src/: CMakeLists.txt  game.cpp
pixel_game_engine/test/: CMakeLists.txt
